sort.basic.gnome.AlgGnomeSort.scala.error
Compilation error:
AlgGnomeSort:12: error: illegal start of simple expression
    if () {
        ^AlgGnomeSort:16: error: ')' expected but '}' found.
  }
  ^